assets/css/style.scss
---
---

@import "{{ site.theme }}";


// =========================
// BASE 
// =========================

body {
    font-family: system-ui, sans-serif;
    font-size: 1.1rem;
    line-height: 1.7;
    max-width: min(70ch, 100%);
    //margin: auto;
    //padding: 1.5rem 1rem;
}

h1, h2, h3 {
    line-height: 1.3;   
    margin-top: 1.5em;
}

// =========================
// LINKS - LIGHT
// =========================

a {
  //text-decoration: underline;
  color: #1f5ea8;

  &:visited {
    color: #163f73;
  }

  &:hover,
  &:focus {
    color: #2f78c4;
    outline: 2px solid #00bdd0;
    outline-offset: 2px;
  }
}

